# yarp-device-vicon-bridge

./: .gitignore  CMakeLists.txt  README.md  vicon.ini
cmake/: FindViconSDK.cmake
include/: YarpViconBridge.h
src/: YarpViconBridge.cpp  main.cpp
